# ChatAPP

./: .gitignore  CMakeLists.txt  ChatQL.pptx  README.md
Client/: Client.cpp  Client.h  client_main.cpp
Common/: Message.cpp  Message.h  Net.cpp  Net.h  User.cpp  User.h
Server/: Database.cpp  Database.h  server.cpp  server.h  server_main.cpp
